Add text styling, refine list styling specificity

--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@ h2 {
     font-weight: bold;
 }
 
-ul.mainpage li {
+p,
+li {
     font-family: Verdana, Arial, sans-serif;
+}
+
+.index {
     font-size: 36px;
 }
 
